Update the openapi contract
